--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-baseurl: /intro-to-computer-science
-title: Intro to Computer Science
+baseurl: /software-engineering
+title: Software Engineering
 description: >
-  A wonderful foray into computer science for beginner programmers.
+  Making software
