adding jekyll seo plugin

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@ description: >
 copyright: GNU General Public License, Version 3
 layouts_dir: assets/jekyll/_layouts/
 plugins:
-  - "jekyll-github-metadata"
+  - jekyll-github-metadata
+  - jekyll-seo-tag
 defaults:
   - scope:
       path: "content"
